Revert "documentation fixes"
This reverts commit 9edb53dd28b68d13a2d0a96ac6296a615d0d27bd.
