# docs/swagger.json
@@ -11,7 +11,7 @@
     },
     "host": "109.120.183.3:8008",
     "paths": {
-        "/api/adverts": {
+        "/adverts": {
             "get": {
                 "description": "Get a paginated list of adverts",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/api/auth/check_auth": {
+        "/check_auth": {
             "get": {
                 "description": "Verify if the user is authenticated by checking the session",
                 "consumes": [
@@ -75,7 +75,7 @@
                 }
             }
         },
-        "/api/auth/login": {
+        "/login": {
             "post": {
                 "description": "Authenticate user and create a new session",
                 "consumes": [
@@ -90,13 +90,18 @@
                 "summary": "User login",
                 "parameters": [
                     {
-                        "description": "User data for login",
-                        "name": "UnauthorizedUserTruncated",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/storage.UnauthorizedUserTruncated"
-                        }
+                        "type": "string",
+                        "description": "User email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -133,7 +138,7 @@
                 }
             }
         },
-        "/api/auth/logout": {
+        "/logout": {
             "post": {
                 "description": "Invalidate the user session and log the user out",
                 "consumes": [
@@ -177,7 +182,7 @@
                 }
             }
         },
-        "/api/auth/signup": {
+        "/signup": {
             "post": {
                 "description": "Register a new user and create a new session",
                 "consumes": [
@@ -192,13 +197,25 @@
                 "summary": "User signup",
                 "parameters": [
                     {
-                        "description": "User data for signup",
-                        "name": "UnauthorizedUser",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/storage.UnauthorizedUser"
-                        }
+                        "type": "string",
+                        "description": "User email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password confirmation",
+                        "name": "passwordRepeat",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -209,7 +226,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Passwords do not match",
                         "schema": {
                             "$ref": "#/definitions/responses.AuthErrResponse"
                         }
@@ -300,31 +317,6 @@
         },
         "storage.Image": {
             "type": "object"
-        },
-        "storage.UnauthorizedUser": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "passwordRepeat": {
-                    "type": "string"
-                }
-            }
-        },
-        "storage.UnauthorizedUserTruncated": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
         },
         "storage.User": {
             "type": "object",
